facet-diff/tests/snapshots/diff_snapshots__diff_vec_of_structs.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before────────────╮[0m
[36m│[0mVec<User> [       [36m│[0m
[36m│[0m  User {          [36m│[0m
[36m│[0m    name: "Alice",[36m│[0m
[36m│[0m    age: 30,      [36m│[0m
[36m│[0m  },              [36m│[0m
[36m│[0m  User {          [36m│[0m
[36m│[0m    name: "Bob",  [36m│[0m
[36m│[0m    age: 25,      [36m│[0m
[36m│[0m  },              [36m│[0m
[36m│[0m]                 [36m│[0m
[36m╰──────────────────╯[0m
[32m╭After─────────────╮[0m
[32m│[0mVec<User> [       [32m│[0m
[32m│[0m  User {          [32m│[0m
[32m│[0m    name: "Alice",[32m│[0m
[32m│[0m    age: 31,      [32m│[0m
[32m│[0m  },              [32m│[0m
[32m│[0m  User {          [32m│[0m
[32m│[0m    name: "Bob",  [32m│[0m
[32m│[0m    age: 25,      [32m│[0m
[32m│[0m  },              [32m│[0m
[32m│[0m]                 [32m│[0m
[32m╰──────────────────╯[0m
[33m╔Diff══════════════╗[0m
[33m║[0m[                 [33m║[0m
[33m║[0m  {               [33m║[0m
[33m║[0m    age: [31m30[39m → [32m31[39m  [33m║[0m
[33m║[0m  }               [33m║[0m
[33m║[0m  (no changes)    [33m║[0m
[33m║[0m]                 [33m║[0m
[33m╚══════════════════╝[0m
