facet-diff/tests/snapshots/diff_snapshots__diff_vec_of_values.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: a.diff(&b).to_string()
---
[
  1
  [31m2[39m → [32m20[39m
  3
]
