facet-diff/tests/snapshots/diff_snapshots__diff_vec_vs_value_array_element_removed.snap
---
source: facet-diff/tests/diff_snapshots.rs
assertion_line: 1075
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│Vec<i64> [1, 2, 3, 4, 5]│
╰────────────────────────╯
╭After───────────────────╮
│[                       │
│  1,                    │
│  2,                    │
│  3,                    │
│]                       │
╰────────────────────────╯
╔Diff════════════════════╗
║[                       ║
║  .. 3 unchanged items  ║
║  - 4                   ║
║  - 5                   ║
║]                       ║
╚════════════════════════╝
