facet-diff/tests/snapshots/diff_snapshots__diff_vecs_completely_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────╮[0m
[36m│[0mVec<i32> [  [36m│[0m
[36m│[0m  1,        [36m│[0m
[36m│[0m  2,        [36m│[0m
[36m│[0m  3,        [36m│[0m
[36m│[0m]           [36m│[0m
[36m╰────────────╯[0m
[32m╭After───────╮[0m
[32m│[0mVec<i32> [  [32m│[0m
[32m│[0m  4,        [32m│[0m
[32m│[0m  5,        [32m│[0m
[32m│[0m  6,        [32m│[0m
[32m│[0m]           [32m│[0m
[32m╰────────────╯[0m
[33m╔Diff════════╗[0m
[33m║[0m[           [33m║[0m
[33m║[0m  [31m- 1[39m       [33m║[0m
[33m║[0m  [31m- 2[39m       [33m║[0m
[33m║[0m  [31m- 3[39m       [33m║[0m
[33m║[0m  [32m+ 4[39m       [33m║[0m
[33m║[0m  [32m+ 5[39m       [33m║[0m
[33m║[0m  [32m+ 6[39m       [33m║[0m
[33m║[0m]           [33m║[0m
[33m╚════════════╝[0m
